--- a/latex/sections/rb_tree.tex
+++ b/latex/sections/rb_tree.tex
@@ -1,4 +1,4 @@
-\subsection{Rot-Schwarz-Baum}
+\subsection{Rot-Schwarz-Baum}\label{s:rb_tree}
 Der Rot-Schwarz-Baum stellt eine Erweiterung des bin-ären Suchbaums dar. Er wurde 1972 zum ersten mal von Rudolf Bayer unter dem Namen  \textit{symmetric binary B-Tree} vorgestellt.
 
 Ein binärer Suchbaum eignet sich zum schnellen Finden von Schlüsselelementen. Dabei werden die Elemente nicht wie in einer Liste sequentiell durchsucht, sondern es wird mit einer bestimmten Logik vorgegangen.
