tmp commit damit du siehst was drin ist

--- a/latex/Seminararbeit_CFS.tex
+++ b/latex/Seminararbeit_CFS.tex
@@ -49,7 +49,12 @@
 
 % Section-Überschriften werden in GROSSBUCHSTABEN umgestellt
 \section{Einleitung}
-TODO am Ende: hier folgen einleitende worte, woher der cfs kommt, seit wann im kernel, was das ziel dieses papers ist, was abgegrenzt wird,
+Ein Betriebssystem kann als eine Komposition von Computerprogrammen definiert werden, dass die Hardware eines Computers verwaltet und Anwendungsprogrammen zur Verfügung stellt. Die Software Betriebssystem fungiert als Vermittler zwischen dem Benutzer eines Computers und dessen Hardware. Der Prozessscheduler eines Betriebssystems ist für die Verteilung der CPU-Bandbreite gegenüber von Aufgaben (Prozessen) zuständig. Der Algorithmus des Schedulers bestimmt die Reihenfolge und wirkt auf die optimale Leistung ein.\\
+Der Linux-Kernel ist einer der Bereiche, die aktiv durch die Open-Source-Community entwickelt und verbessert werden. Darunter fällt auch die Implementierung des Prozessschedulers. Der Completely Fair Scheduler (CFS) löste mit der Kernelversion 2.6.23 den seit Version 2.6 im Einsatz befindlichen O(1)-Scheduler ab.
+
+
+
+
 
 \section{Grundlagen zum Scheduling}
 In diesem Abschnitt wird der Begriff Scheduling im Allgemeinen und konkret im Bezug auf Prozess-Scheduling definiert und anhand von Beispielen exemplarisch konkretisiert. 
