--- a/latex/literatur.bib
+++ b/latex/literatur.bib
@@ -95,7 +95,14 @@
 	title = {Completely Fair Scheduler},
 	journal = {Linux Journal },
 	year = {2009},
+	month = {August},
 }
 
-
+@article{papercomparison,
+	author = {C.S. Wong, I.K.T. Tan, R.D. Kumari, J.W. Lam},
+	title = {Fairness and Interactive Performance of O(1) and CFS Linux Kernel Schedulers},
+	journal = {2008 International Symposium on Information Technology },
+	year = {2008},
+	month = {September}
+}
 
