--- a/latex/literatur.bib
+++ b/latex/literatur.bib
@@ -97,5 +97,10 @@
 	year = {2009},
 }
 
-
-
+@thesis{nikita,
+	author = {Nikita Ishkov},
+	title = {A complete guide to Linux process scheduling},
+	school = {University of Tampere},
+	year = {2015},
+	month = {2},
+}
