--- a/latex/sections/aufbau.tex
+++ b/latex/sections/aufbau.tex
@@ -33,7 +33,32 @@ slice = \frac{se\rightarrow load.weight}{cfs\_rq\rightarrow load.weight} * perio
 \label{eq:slice}
 \end{equation}
 
-Hierbei ist \textit{se$\rightarrow$load.weight} das berechnete Gewicht des Prozesses aus dem entsprechendem \textit{nice} Wert und die Variable \textit{cfs\_rq$\rightarrow$load.weight} ist die Summe aller Gewichte der momentan aktiven Prozesse der Warte\-schlan\-ge.
+Hierbei ist \textit{se$\rightarrow$load.weight} das Gewicht des Prozesses aus dem entsprechendem \textit{nice}-Wert, welcher durch ein von dem Kernel bereit gestelltes Array \texttt{prio\_to\_weight[]} ermittelt wird. In \cite{nikita} wird der Inhalt des Arrays mit folgenden Werten angegeben:
+
+\begin {table}[h]
+\begin{center}
+\begin{tabular}{r|rrrrr}
+ &	\multicolumn{5}{c}{\textit{Gewichte}} \\
+	\hline\hline
+	\\[\dimexpr-\normalbaselineskip+2pt]
+	\textit{nice} & &+1	&	+2	& +3	& +4	\\
+	\hline
+    \\[\dimexpr-\normalbaselineskip+2pt]
+	-20	&	88761	&	71755	&	56483	&	46273	&	36291	\\
+	-15	&	29154 	&	23254 	&	18705 	&	14949 	&	11916	\\
+	-10	&	9548	&	7620	&	6100	&	4904	&	3906	\\
+	-5 	&	3121 	&	2501 	&	1991 	&	1586 	&	1277	\\
+	0	&	1024 	&	820		&	655		&	526		&	423		\\
+	5 	&	335 	&	272		& 	215		&	172		&	137		\\
+	10	&	110		&	87 		&	70 		&	56 		&	45		\\
+	15 	&	36 		&	29 		&	23 		&	18 		&	15	 	\\		
+\end{tabular}
+\caption {\textit{nice}-Wert zu Gewicht} \label{tab:nice2weight} 
+\end{center}
+\end{table}
+
+   
+Die Variable \textit{cfs\_rq$\rightarrow$load.weight} ist die Summe aller Gewichte der momentan aktiven Prozesse der Warte\-schlan\-ge.
 \textit{period} ist der \glqq Zeitschlitz\grqq{}, für welchen eine Bewertung mit Basis auf den idealen Zeitscheiben der aktuellen Prozesse vorgenommen werden soll. Dieser Wert ist nicht konstant und einstellbar. Erreicht z.B. die Anzahl der lauf\-fähigen Prozesse eine kritische Grenze, so muss der Wert von \textit{period} erhöht werden. 
 Diese Grenze wird im Kernel mit Hilfe der Variable \textit{nr\_latency} ermittelt. Diese Variable setzt sich aus dem Verhätlnis von \textit{period} und der minmalen Zeitscheibe zusammen \cite{paperfairness}.
 
@@ -53,10 +78,13 @@ vruntime \mathrel{+}= \frac{delta\_exec}{se\rightarrow load.weight} * NICE\_0\_L
 \label{eq:vruntime}
 \end{multline}
 
-Hierbei stellt \textit{delta\_exec} die bereits ausgeführte Zeit der jeweiligen Prozesses dar und \textit{NICE\_0\_LOAD} ist ein Einheitswert der Gewichte, welcher sich aus einer 10-bit Dualzahl ergibt. Mit Hilfe des ersten Terms wird die aktuelle virtuelle Laufzeit des jeweiligen Prozesses errechnet werden, und mit dem zweiten Term kann die virtuelle Laufzeit errechnet werden, welche jeder Prozess nach Ablauf der Periodenzeit \textit{period} für diesen Zeitabschnitt erreicht haben soll.  
-Mit dieser neuen Variablen können nun die Prozesse entsprechend ihrer Laufzeit und ihrem Gewicht bewertet werden und eine Rangfolge ermittelt werden. Dazu wird in diesem der Rot-Schwarz-Baum [s.Kapitel \ref{s:rb_tree}] verwendet. Die Prozesse werden nach ihrem \textit{vruntime}-Wert in den Baum einsortiert. Die nächsten Zuteilung zum Prozessor bekommt immer das erste Objekt an der linken Seite des Baumes.
+Hierbei stellt \textit{delta\_exec} die bereits ausgeführte Zeit der jeweiligen Prozesses dar und \textit{NICE\_0\_LOAD} ist ein Einheitswert der Gewichte, welcher sich aus einer 10-bit Dualzahl ergibt. Mit Hilfe des ersten Terms aus Formel \ref{eq:vruntime} wird die aktuelle virtuelle Laufzeit des jeweiligen Prozesses bestimmt. Der zweite Term dient zur Bestimmung der allgemeinen virtuelle Laufzeit, welche jeder Prozess nach Ablauf der Periodenzeit \textit{period} für diesen Zeitabschnitt erreicht haben soll. Dieser Wert soll nach Ablauf der Periodenzeit für alle Prozess gleich sein.
 
-Ein Beispiel dazu:
+Mit dieser neuen Variablen können nun die Prozesse entsprechend ihrer Laufzeit und ihrem Gewicht bewertet und eine Rangfolge erstellt werden. Dazu wird an dieser Stelle der Rot-Schwarz-Baum [s.Kapitel \ref{s:rb_tree}] verwendet. Die Prozesse werden nach ihrem \textit{vruntime}-Wert in den Baum einsortiert. Dabei steht der Prozess mit der kleinsten \textit{vruntime} am weitesten links und kann nun durch den Scheduler ohne lange Suchzeiten bestimmt und ausgewählt werden. 
+
+Stehen zum Beispiel drei lauffähige Prozesse  mit \textit{nice}-Werten $0$, $1$ und $2$ und entsprechenden Gewichten von $1024$, $820$ und $655$ in einer Warteschlange für einen Prozessor.
+Dann ergeben sich die idealen Zeitscheiben bei einer Periode von 20ms mit Formel \ref{eq:slice} zu $8.2ms$, $6.6ms$ und $5.2ms$. Ermittelt man nun dazu passend die \textit{vruntime}-Werte und zwar so, dass jeder Prozess seine Zuteilung für diese Periode vollständig ausgenutzt hat, so wird ersichtlich, dass alle Prozesse nun den gleichen \textit{vruntime}-Wert von ca. $8*10^{-6}$ besitzen. 
+
 %Jeder Prozess er\-hält eine Zeitscheibe, welche proportional zum eigenen Gewicht im Verhältnis zu den Gewichten aller Prozesse ist. Die Wahl des nächstes Prozesses fällt immer auf den Prozess, welcher bis zu diesem Zeitpunkt die geringste Zuteilung des Prozessors erhalten hat.
 %Zur Berechnung einer Zeitscheibe, setzt der CF-Scheduler eine sogenannte „targeted latency“. Diese stellt einen Richtwert für die verfügbare Zeit aller anstehenden Prozesse dar, welcher äquivalent im perfekten Multitasking erreicht würde.
 
