--- a/latex/sections/aufbau.tex
+++ b/latex/sections/aufbau.tex
@@ -33,7 +33,7 @@ slice = \frac{se\rightarrow load.weight}{cfs\_rq\rightarrow load.weight} * perio
 \label{eq:slice}
 \end{equation}
 
-Hierbei ist \textit{se$\rightarrow$load.weight} das Gewicht des Prozesses aus dem entsprechendem \textit{nice}-Wert, welcher durch ein von dem Kernel bereit gestelltes Array \texttt{prio\_to\_weight[]} ermittelt wird. In \cite{nikita} wird der Inhalt des Arrays mit folgenden Werten angegeben:
+Hierbei ist \textit{se$\rightarrow$load.weight} das Gewicht des Prozesses aus dem entsprechendem \textit{nice}-Wert, welches durch ein von dem Kernel bereit gestelltes Array \texttt{prio\_to\_weight[]} ermittelt wird. In \cite{nikita} wird der Inhalt des Arrays mit folgenden Werten angegeben:
 
 \begin {table}[h]
 \begin{center}
