--- a/latex/sections/rb_tree.tex
+++ b/latex/sections/rb_tree.tex
@@ -6,18 +6,21 @@ Damit kann im Vergleich zur sequentiellen Liste die Laufzeit für verschiedene O
 
 Die Anordnung der Elemente wird, wie im Namen bereits enthalten, als Baum vorgenommen. Dabei müssen bestimmte Kriterien für die Anordnung eingehalten werden. Liegt eine bestimmte Anzahl von Elementen vor, die als Binär-Baum angeordnet werden sollen, so wird zunächst ein beliebiges Element ausgewählt und als Wurzel gesetzt. Damit kann es allerdings passieren, dass der Baum später nicht ausgeglichen ist, und alle Äste unterschiedliche Dimensionen aufweisen. Dies würde zu einer unausgewogenen Suche führen. Daher ist es Sinnvoll an dieser Stelle ein Element mit einem Schlüsselwert zu finden, welcher sich relativ in der Mitte der vorkommenden Skala und welcher sich zudem auch bezüglich der Anzahl der Elemente in der Mitte befindet.
 
-Danach werden die nächste Elemente der Reihe nach mit der Wurzel verglichen. Ist das momentan betrachtete Elemente größer als das Wurzel-Element, so wird es an der rechten Seite unter der Wurzel angeordnet. Ist es kleiner als die Wurzel, so kommt es auf die linke Seite. Nun kann das nächste Element mit der Wurzel verglichen werden. Wie im obigen Fall wird es, wenn es größer ist, der rechten Seite zugeordnet und wenn es kleiner ist, der linke Seite. An dieser Stelle kann es jetzt passieren, dass auf der ausgewählten Seite bereits ein Blatt bzw. ein Knoten existiert. Hier muss nun ein weiterer Vergleich stattfinden. Wiederum wird geprüft, ob des momentan ausgewählte Elemente größer oder kleiner ist als dieser Knoten. Dann wird es unter dieses Element als Blatt angefügt. Somit entsteht ein Baum. Wichtig ist in diesem Verfahren, dass jeder Knoten nur maximal zwei Elemente besitzen kann. 
+Danach werden die nächste Elemente der Reihe nach mit der Wurzel verglichen. Ist das momentan betrachtete Elemente größer als das Wurzel-Element, so wird es an der rechten Seite unter der Wurzel angeordnet. Ist es kleiner als die Wurzel, so kommt es auf die linke Seite. Nun kann das nächste Element mit der Wurzel verglichen werden. Wie im obigen Fall wird es, wenn es größer ist, der rechten Seite zugeordnet und wenn es kleiner ist, der linke Seite. An dieser Stelle kann es jetzt passieren, dass auf der ausgewählten Seite bereits ein Blatt bzw. ein Knoten existiert. Hier muss nun ein weiterer Vergleich stattfinden. Wiederum wird geprüft, ob des momentan ausgewählte Elemente größer oder kleiner ist als dieser Knoten. Dann wird es entsprechend unter dieses Element angefügt. Somit entsteht ein Baum. Wichtig ist in diesem Verfahren, dass jeder Knoten nur maximal zwei Elemente besitzen darf. 
 
 Die Suche nachher im Baum gestaltet sich ähnlich. Soll ein Element im Baum gesucht werden, so wird ein Vergleich an der Wurzel des Baumes gestartet. Ist der Schlüs\-sel des zu suchenden Elements größer, so wird auf die nächste untere Ebene der rechten Seite gewechselt. Ist der Schlüssel kleiner, dann findet der Wechsel entsprechend auf der linken Seite statt. 
 
-Der größte Vorteil dieser Anordnung besteht wohl in der erheblichen Verkürzung der Laufzeit. 
+Der größte Vorteil dieser Anordnung besteht in der erheblichen Verkürzung der Laufzeit. 
 Als Beispiel soll die Laufzeit beim Suchen dienen.
-Während beim sequentiellen Suchen der Maxmimalwert der Laufzeit $O(n)$, mit $n$ als Anzahl der vorhanden Elemente, betragen kann, wird die Laufzeit beim binären Suchbaum auf maximal $O(h)$ verkürzt, wobei $h$ als die Höhe des Baumes betrachtet wird \cite[S.293]{tcormen}
+Während beim sequentiellen Suchen der Maxmimalwert der Laufzeit $O(n)$ betragen kann, mit $n$ als Anzahl der vorhanden Elemente, , wird die Laufzeit beim binären Suchbaum auf maximal $O(h)$ verkürzt, wobei $h$ als die Höhe des Baumes betrachtet wird \cite{tcormen}.
 
 Allerdings kann es auch durch ständiges Löschen und Ein-fügen von Elementen oder aber auch durch eine unvorteilhafte Wahl des Wurzelknotens dazu kommen, dass der Baum aus dem Gleichgewicht gerät. Dies bedeutet, dass eine Seite des Baumes erheblich mehr Knoten besitzt als die andere. Damit würde der Baum in ein Ungleichgewicht fallen. Dadurch wird sich die Suchlaufzeit auf der einen Seite erhöhen und auf der anderen Seite ver\-kürzen. Im Extremfall wären alle Elemente auf einer Seite hintereinander angeordnet und somit wäre die Laufzeit gleich der einer sequentiellen Liste.
 
-Eine solche Fehlanpassung des Baumes kann mit Hilfe eines Rot-Schwarz-Baumes kompensiert werden. Damit ist es möglich, einen sich ständig ändernden Baum in einem annähernden Gleichgewicht zu halten. 
-Der Rot-Schwarz-Baum erweitert einen Binär-Baum mit Hilfe eines Farbattributs für jeden Knoten bzw. für jedes Blatt. Dieses Farbattribut kann in diesem Fall Rot oder Schwarz betragen. Mit Hilfe dieses Attributes können nun bestimmte Regeln aufgestellt werden, welche dann dafür Sorgen das immer ein grundlegenedes Gleichgewicht im Baum herrscht. In Abbildung \ref{fig:rbtree} ist der Aufbau eines Rot-Schwarz-Baumes zu sehen.
+Eine solche Fehlanpassung kann mit Hilfe des Rot\--Schwarz-Baumes kompensiert werden. Dieser stellt eine Eweiterung des Binären-Suchbaums dar. Damit ist es möglich, einen sich ständig ändernden Baum in einem annähernden Gleichgewicht zu halten. 
+
+Der Rot-Schwarz-Baum erhält seinen Namen durch ein Farbattribut, welches zusätzlich an jeden Knoten an\-gehängt wird. Dieses Farbattributs kann entweder die Farbe Rot oder die Farbe Schwarz enthalten. 
+Mit Hilfe dieses Attributes kann dann der Baum nach bestimmten Regeln bearbeitet werden, welche dafür Sorgen, dass immer ein grundlegendes Gleichgewicht im Baum herrscht. 
+In Abbildung \ref{fig:rbtree} ist der Aufbau eines Rot-Schwarz-Baumes zu sehen.
 
 \begin{figure}[h]
 	\centering
@@ -28,7 +31,7 @@ Der Rot-Schwarz-Baum erweitert einen Binär-Baum mit Hilfe eines Farbattributs f
 \end{figure}
 
  
-Nach \cite[S.311]{tcormen} müssen folgende Regeln eingehalten werden, damit ein Baum nach den Prinzipien des Rot-Schwarz-Baumes zustande kommt:
+Nach \cite{tcormen} müssen folgende Regeln eingehalten werden, damit ein Rot-Schwarz-Baum zustande kommt:
 
 \begin{enumerate}
 	\item Jeder Knoten ist entweder rot oder schwarz.
@@ -38,9 +41,13 @@ Nach \cite[S.311]{tcormen} müssen folgende Regeln eingehalten werden, damit ein
 	\item Für jeden Knoten enthalten alle einfachen Pfade, die an diesem Knoten starten und in einem Blatt des Teilbaumes dieses Knotens enden, die gleiche Anzahl schwarzer Knoten. 
 \end{enumerate}
 
+Wie bereits Thomas H. Cormen in \cite{tcormen} beweist, kann ein Baum, welcher nach diesen Regeln erstellt wird, eine maximale Höhe von $2lg(n+1)$ erreichen. Damit ergeben sich die Laufzeiten für verschiedene Operation, wie z.B. das Suchen im Baum, auf einen Maximalwert von $O(lg\, n)$.
 
-Beim Einfügen bzw. Löschen im binären Baum werden Verbindungen oder Blätter/Knoten verändert. Damit gerät der Baum immer mehr ins Ungleichgewicht. 
+Beim Einfügen oder Löschen in den Baum werden Verbindungen oder Knoten verändert. Dabei kann es wieder passieren, dass der Baum in ein Ungleichgewicht gerät. 
+Um diesen entgegen zu wirken, werden spezielle Einfüge-, bzw. Lösch\-operationen angewendet, welche so konstruiert sind, dass immer die fünf oben genannten Regeln eingehalten werden. 
+
+So müssen innerhalb dieser Einfüge- oder Löschoperation\-en z.B. Rotationen von Knoten unter bestimmten Bedingung durchgeführt oder die Farben bzw. auch die Zeigerstruktur geändert werden.
+
+Werden die fünf Regeln unter allen Bedingungen und zu jeder Zeit eingehalten, so kann immer die maximale Laufzeit garantiert werden und außerdem können der kleinste und der größte Schlüssel immer direkt auf der linken bzw. auf der rechten Seite gefunden werden.
 %Mit den Regeln von RED-BLACK wird mit Hilfe von z.B. Rotationen um das den Parent Knoten, immer für das richtige Gleichgewicht gesorgt.
 
-
- Was ich aber noch wichtig finde ist, warum der Baum eben Rot-Schwarz heißt und wie das Gleichgewicht gewährleistet wird.
